--- a/backend/src/main/resources/templates/thread.html
+++ b/backend/src/main/resources/templates/thread.html
@@ -160,18 +160,20 @@
         >
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        <!-- Formulario -->
-        <form>
+      </div>      
+      <!-- Formulario -->
+      <form id="uploadForm" action="/t/addPost" method="post">
+        <div class="modal-body">
           <!-- Campo de texto -->
           <div class="form-group">
             <label for="inputText">Text</label>
             <textarea
               class="form-control"
               id="inputTextArea"
+              name="post-form-text"
               rows="3"
               placeholder="Introduce un texto"
+              required
             ></textarea>
           </div>
           <!-- Drag and drop para imágenes -->
@@ -183,18 +185,18 @@
               </div>
             </div>
           </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-link text-decoration-none"
-          data-dismiss="modal"
-        >
-          Close
-        </button>
-        <button type="submit" class="btn btn-primary">Upload</button>
-      </div>
+        </div>
+        <div class="modal-footer">
+          <button
+            type="button"
+            class="btn btn-link text-decoration-none"
+            data-dismiss="modal"
+          >
+            Close
+          </button>
+          <button type="submit" class="btn btn-primary">Upload</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
