--- a/backend/src/main/resources/templates/forum.html
+++ b/backend/src/main/resources/templates/forum.html
@@ -46,6 +46,13 @@
   </div>
 </div>
 
+<script>
+  const nameForum = "{{forum.name}}";
+  document.addEventListener("DOMContentLoaded", function () {
+    getThreads();
+  });
+</script>
+
 <script src="/js/forum.js"></script>
 <script src="/js/paginated.js"></script>
 <script src="/js/spinner.js"></script>
