--- a/frontendFix/src/app/components/sign-up/sign-up.component.html
+++ b/frontendFix/src/app/components/sign-up/sign-up.component.html
@@ -1,14 +1,17 @@
-<div class="container mt-4 flex-grow-1">
+
+
+<div *ngIf="!error && !done">
+  <div class="container mt-4 flex-grow-1">
     <div class="row justify-content-center align-items-center">
       <div class="col-md-6 col-lg-4">
         <div class="registration-form bg-light mt-4 p-4">
-            <form (ngSubmit)="onSubmit()">
+            <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
             <div class="col-12 d-flex justify-content-center">
               <h4 class="text-center mb-3">User Registration</h4>
             </div>
             <div class="col-12">
               <label>Username</label>
-              <input #username
+              <input formControlName="username"
                 type="text"
                 name="username"
                 class="form-control"
@@ -19,7 +22,7 @@
             </div>
             <div class="col-12 mt-2">
               <label>Email</label>
-              <input #email
+              <input formControlName="email"
                 type="email"
                 name="email"
                 class="form-control"
@@ -30,7 +33,7 @@
             </div>
             <div class="col-12 mt-2">
               <label>Password</label>
-              <input #password
+              <input formControlName="password"
                 type="password"
                 name="password"
                 class="form-control"
@@ -55,4 +58,29 @@
       </div>
     </div>
   </div>
+</div>
   
+<div *ngIf="error">
+  <div class="container mt-5 flex-grow-1">
+    <div class="mt-3">
+      <h3 class="text-danger">
+        Registration Unsuccessful! This email or username is already in use.
+        Please choose a different one.
+      </h3>
+      <br />
+      <a href="/register">Try to sign up again</a>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="done">
+  <div class="container mt-5 flex-grow-1">
+  <div class="mt-3">
+    <h3 class="text-success">
+      Registration Successful! You are now a member of Inforum. Welcome aboard!
+    </h3>
+    <br />
+    <a href="login">Try to log In</a>
+  </div>
+  </div>
+</div>
